feat: Implement login and registration screens with event handling